<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/mainGreen">

    <ImageView
        android:id="@+id/gsb_logo_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:src="@drawable/icon_gsb_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/full_app_name"
        android:textColor="#000000"
        android:textSize="30sp"
        android:typeface="monospace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gsb_logo_small" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="130dp"
        android:text="@string/string_register"
        android:background="@drawable/btn_signup"
        android:textColor="@color/white"
        android:stateListAnimator="@null"

        app:layout_constraintTop_toBottomOf="@id/logo_subtext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_login"
        android:text="@string/string_login"
        android:textColor="@color/mainGreen"
        android:stateListAnimator="@null"

        app:layout_constraintTop_toBottomOf="@id/registerButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>