<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGreen">

    <ImageView
        android:id="@+id/add_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_add_64"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_logo_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/string_add_frais"
        android:textSize="30sp"
        android:textColor="#000000"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_logo" />

    <TextView
        android:id="@+id/infos_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/string_infos"
        android:textColor="#000000"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_logo_subtext" />

    <EditText
        android:id="@+id/infos_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"

        android:inputType="text"
        android:textColor="@color/white"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infos_text" />

    <TextView
        android:id="@+id/quantite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/string_quantite"
        android:textColor="#000000"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infos_box" />

    <EditText
        android:id="@+id/quantite_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/white"
        android:inputType="number"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantite_text" />

    <TextView
        android:id="@+id/montant_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/string_montant"
        android:textColor="#000000"

        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantite_box" />

    <EditText
        android:id="@+id/montant_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"

        android:inputType="number"
        android:textColor="@color/white"
        android:selectAllOnFocus="true"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/montant_text" />



    <Button
        android:id="@+id/ValidationButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_login"
        android:text="@string/string_valider"
        android:textColor="@color/mainGreen"
        android:stateListAnimator="@null"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/montant_box"/>


</androidx.constraintlayout.widget.ConstraintLayout>